<resources>
    <string name="app_name">HackBus</string>
    <string name="title_activity_projet_form">ProjetFormActivity</string>
    <string name="selection_type">Selection du type de projet</string>
    <string name="choix_type">Choix du type</string>
    <string name="ok">Ok</string>
    <string name="selection_competence">Selectionné une competence</string>
    <string name="choix_competence">choix de la competence</string>
    <string name="telephone">Telephone</string>
    <string name="fake_project_title">Faux titre de projet</string>
    <string name="all_your_projects">All your projects</string>
    <string name="organizer">Organizer :</string>
    <string name="fake_organizer_name">Phillips Howard</string>
    <string name="nb_participants">Nb.participants :</string>
    <string name="team_size">34</string>
    <string name="menu">MENU</string>
    <string name="create_new_project">Create new project</string>
    <string name="project_s_list">Project\'s list</string>
    <string name="user_page">User Page</string>
    <string name="create_project">Create Project</string>
    <string name="no_similars_tag">Vous ne pouvez pas avoir deux tags similaire</string>
</resources>
